--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "serve": "nodemon src/server.js",
-    "start": "node src/server.js",
-    "webpack": "webpack --mode development --watch"
+    "serve": "nodemon server.js",
+    "start": "node server.js",
+    "webpack": "webpack --mode development"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +17,6 @@
     "morgan": "^1.10.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12"
   },
   "devDependencies": {
@@ -26,9 +25,7 @@
     "@babel/preset-react": "^7.10.4",
     "babel-loader": "^8.1.0",
     "css-loader": "^4.2.1",
-    "html-webpack-plugin": "^4.3.0",
-    "mini-css-extract-plugin": "^0.10.0",
-    "node-sass": "^4.14.1",
-    "sass-loader": "^9.0.3"
+    "style-loader": "^1.2.1",
+    "webpack": "^4.44.1"
   }
 }
