--- a/package.json
+++ b/package.json
@@ -6,17 +6,20 @@
   "scripts": {
     "serve": "nodemon server.js",
     "start": "node server.js",
-    "webpack": "webpack --mode development"
+    "webpack": "webpack --mode development --watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "mini-css-extract-plugin": "^0.10.0",
     "mongoose": "^5.10.0",
     "morgan": "^1.10.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "sass": "^1.26.10",
+    "sass-loader": "^9.0.3",
     "webpack-cli": "^3.3.12"
   },
   "devDependencies": {
